@@ -48,7 +48,7 @@ close_dialog
 
 if [ -z "$id" ]; then
 #    ask_user /lib/partman/storage_device "$dev" "$id" || true
-    open_dialog GET_DISK_TYPE
+    open_dialog GET_LABEL_TYPE
     read_line x
     close_dialog
     # do not try to create partition table on sw RAID device or LVM LV
