@@ -19,6 +19,7 @@ partman-base (110) UNRELEASED; urgency=low
   * Compute some variables only once to make things faster:
     - can_escape: whether debconf can escape only once.
     - debconf_select_lead: can we use NBSP on the terminal
+  * Rename GET_DISK_TYPE to GET_LABEL_TYPE.
 
  -- Colin Watson <cjwatson@debian.org>  Mon, 16 Jul 2007 17:43:17 +0100
 
